# Discloud-lib

./: .gitignore  CMakeLists.txt  Discloud_Library.sln  LICENSE.txt  README.md
Discloud_Library/: Discloud_Library.vcxproj  Discloud_Library.vcxproj.filters  main.cc  main.cpp  teamManager.h
Discloud_Library/discloud/: TeamManager.h  application.h  discloud.h  discloudResponses.h  snowflake.h  team.h  upload.h  user.h
